<resources xmlns:tools="http://schemas.Android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">牛云直聘</string>
    <string name="empty_message" translatable="false">信息跑丢了</string>
    <string name="no_net_message" translatable="false">网络连接失败\n请检查您的网络</string>
    <string name="no_net_message_t" translatable="false">网络异常，请检查</string>
    <string name="loading_message" translatable="false">Please wait</string>
    <string name="error_message" translatable="false">页面找不到了\n请稍后重试</string>
    <string name="last_version">已是最新版本</string>
    <string name="app_update_title">发现新版本</string>
    <string name="app_update">立即升级</string>
    <string name="empty_button" translatable="false">逛逛首页</string>
    <string name="loading_button" translatable="false">Cancel</string>
    <string name="error_button" translatable="false">刷新</string>
    <string name="load_over" translatable="false">已加载全部数据</string>
    <string name="load_ing" translatable="false">加载中</string>
    <string name="net_state_error" translatable="false">网络连接失败，请检测您的网络</string>
    <string name="plz_input_phone" translatable="false">请输入手机号</string>
    <string name="login" translatable="false">登录</string>
    <string name="plz_input_password" translatable="false">请输入密码</string>
    <string name="plz_input_check_code" translatable="false">请输入验证码</string>
    <string name="regist" translatable="false">注册</string>
    <string name="get_verify_code" translatable="false">获取验证码</string>
    <string name="agrrement_agree" translatable="false">我已经阅读并同意</string>
    <string name="agrrement_title" translatable="false">《用户服务协议》</string>
    <string name="password_hint" translatable="false">请输入您的密码</string>
    <string name="password_agin_hint" translatable="false">请再次输入密码</string>
    <string name="publish_photo" translatable="false">从图片库</string>
    <string name="publish_picture" translatable="false">拍照</string>
    <string name="publish_photo_max" translatable="false">最多添加9张图片</string>
    <string name="main_tab_name_index" translatable="false">首页</string>
    <string name="main_tab_name_me" translatable="false">我的</string>
    <string name="main_tab_name_alljobs" translatable="false">找工作</string>
    <string name="main_tab_name_allPerson" translatable="false">找人才</string>
    <string name="main_tab_name_live" translatable="false">直播</string>
    <string name="main_tab_name_find" translatable="false">发现</string>
    <string name="index_tab_name_message" translatable="false">聊天</string>
    <string name="index_tab_name_company" translatable="false">职位</string>
    <string name="index_tab_name_job_seeker" translatable="false">人才</string>
    <string name="company_home_page" translatable="false">公司主页</string>
    <string name="company_hot_position" translatable="false">热招职位</string>
    <string name="sm_item_auth" translatable="false">ShareSDK授权demo</string>
    <string name="not_yet_authorized" translatable="false">尚未授权</string>
    <string name="close_info_dialog" translatable="false">关闭信息界面</string>
    <string name="login_to_format" translatable="false">登陆到%s</string>
    <string name="remove_to_format" translatable="false">注销%s登录</string>
    <string name="remove_to_format_success" translatable="false">成功移除%s登录信息</string>
    <string name="register_key_user_icon" translatable="false">头像:</string>
    <string name="register_key_user_name" translatable="false">昵称:</string>
    <string name="register_key_user_gender" translatable="false">性别:</string>
    <string name="register_key_user_UID" translatable="false">U I D:</string>
    <string name="register_key_user_mail" translatable="false">邮箱:</string>
    <string name="register_key_user_password" translatable="false">密码:</string>
    <string name="register_user_info" translatable="false">用户信息</string>
    <string name="register_up" translatable="false">注册</string>
    <string name="register_girl" translatable="false">女</string>
    <string name="register_boy" translatable="false">男</string>
    <string name="register_UserID" translatable="false">UserID不能修改</string>
    <string name="tpl_no_sdcard" translatable="false">sdcard 卡不存在</string>
    <string name="register_success" translatable="false">注册成功</string>
    <string name="register_failed" translatable="false">注册失败</string>
    <string name="wechat_client_inavailable" translatable="false">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable" translatable="false">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="app_slogon" translatable="false">IM as a service</string>
    <string name="text_ack_msg" translatable="false">Read</string>
    <string name="text_delivered_msg" translatable="false">Delivered</string>
    <string name="back" translatable="false">Back</string>
    <string name="save" translatable="false">Save</string>
    <string name="button_pushtotalk" translatable="false">Hold to talk</string>
    <string name="button_send" translatable="false">发送</string>
    <string name="attach_smile" translatable="false">Emoticon</string>
    <string name="attach_picture" translatable="false">Image</string>
    <string name="attach_take_pic" translatable="false">Capture</string>
    <string name="attach_location" translatable="false">Location</string>
    <string name="attach_video" translatable="false">Video</string>
    <string name="attach_file" translatable="false">File</string>
    <string name="attach_voice_call" translatable="false">Voice call</string>
    <string name="attach_video_call" translatable="false">Video call</string>
    <string name="user_card" translatable="false">Business card</string>
    <string name="move_up_to_cancel" translatable="false">Finger up to cancel sending</string>
    <string name="release_to_cancel" translatable="false">Finger release to cancel sending</string>
    <string name="send_fail" translatable="false">Send failed</string>
    <string name="delete_message" translatable="false">Delete message</string>
    <string name="delete_conversation_messages" translatable="false">Delete conversation and messages</string>
    <string name="delete_conversation" translatable="false">Delete conversation</string>
    <string name="copy_message" translatable="false">Copy message</string>
    <string name="delete_voice" translatable="false">Delete voice</string>
    <string name="delete_video" translatable="false">Delete video</string>
    <string name="resend" translatable="false">Resend</string>
    <string name="confirm_resend" translatable="false">Confirm to resend？</string>
    <string name="connect_failuer_toast" translatable="false">Please check the network or try again later</string>
    <string name="network_unavailable" translatable="false">The network connection is not available, please check the network</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="forward" translatable="false">Forward</string>
    <string name="button_logout" translatable="false">Logout</string>
    <string name="button_uploadlog" translatable="false">Upload the log</string>
    <string name="ok" translatable="false">OK</string>
    <string name="search_contanier" translatable="false">Search："%s"</string>
    <string name="prompt" translatable="false">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%s location]</string>
    <string name="location_message">位置</string>
    <string name="recording_video">Record video</string>
    <string name="switch_camera">Switch camera</string>
    <string name="capture_image">Capture image</string>
    <string name="record_finish_toast">Recording finish, file saved in %s</string>
    <string name="location_prefix">[my location]</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="dynamic_expression">[dynamic expression]</string>
    <string name="Group_chat">group chat</string>
    <string name="all_members">All members</string>
    <string name="were_mentioned">[someone @me]</string>
    <string name="gorup_not_found">can not find group</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="em_user_remove">This user has been removed</string>
    <string name="user_forbidden">User is forbidden by server</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="voice">Sounds</string>
    <string name="shake">Vibrate</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="push_settings">Message push settings</string>
    <string name="book_black">Black list</string>
    <string name="set_custom_appkey">Set custom App key</string>
    <string name="set_custom_server">Set custom servers</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="nickname_description">Once this nickname is set, it will be used in push notification (by default this is user ID ) when the receiver is using the iOS device.</string>
    <string name="group_chat">Group chat</string>
    <string name="chat_room">Chat room</string>
    <string name="add_friend">Add friends</string>
    <string name="search">Search</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Debug</string>
    <string name="push_nick">nickname for Notification</string>
    <string name="call_option">Call Option</string>
    <string name="multi_device_management">Multi device management</string>
    <string name="Current_version">SDK version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="add_public_group_chat">Add public group</string>
    <string name="add_public_chat_room">Add public chatroom</string>
    <string name="group_not_found">Can not find this group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public groups</string>
</resources>