<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.niuyun.hire.view.TitleBar
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <com.niuyun.hire.view.CleanableEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_phone_title"
            android:background="@drawable/bg_bbb_4"
            android:hint="@string/plz_input_phone"
            android:paddingLeft="10dp"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_cccccc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="9dp"
            android:text="手机号    " />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_check_code"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/check_code_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="9dp"
                android:text="验证码    " />

            <EditText
                android:id="@+id/et_check_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/check_code_icon"
                android:background="@drawable/bg_bbb_4"
                android:hint="@string/plz_input_check_code"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_cccccc"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_toLeftOf="@+id/tv_check_code"
                android:text="|"
                android:textColor="@color/color_eeeeee"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_check_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@string/get_verify_code"
                android:textColor="@color/color_31c880"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <com.niuyun.hire.view.CleanableEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_password_title"
            android:background="@drawable/bg_bbb_4"
            android:hint="@string/password_hint"
            android:paddingLeft="10dp"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_cccccc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="9dp"
            android:text="新密码    " />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <com.niuyun.hire.view.CleanableEditText
            android:id="@+id/user_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_new_password_title"
            android:background="@drawable/bg_bbb_4"
            android:hint="@string/password_hint"
            android:paddingLeft="10dp"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_cccccc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="9dp"
            android:text="确认密码" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/bt_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/bg_ff6900_solid"
            android:text="确认修改"
            android:textColor="@color/color_ffffff" />

    </RelativeLayout>

</LinearLayout>