<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <com.niuyun.hire.view.TitleBar
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.niuyun.hire.view.CleanableEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/phone_icon"
                    android:background="@drawable/bg_bbb_4"
                    android:hint="请输入手机号"
                    android:inputType="number"
                    android:maxLength="11"
                    android:paddingLeft="10dp"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/phone_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="9dp"
                    android:text="手机号" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_check_code"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:visibility="visible">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/check_code_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="9dp"
                        android:text="验证码" />

                    <EditText
                        android:id="@+id/et_check_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/check_code_icon"
                        android:background="@drawable/bg_bbb_4"
                        android:hint="@string/plz_input_check_code"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="@color/color_999999"
                        android:textColorHint="@color/color_cccccc"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_toLeftOf="@+id/tv_check_code"
                        android:text="|"
                        android:textColor="@color/color_eeeeee"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/tv_check_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/get_verify_code"
                        android:textColor="@color/color_31c880"
                        android:textSize="15sp" />
                </RelativeLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.niuyun.hire.view.CleanableEditText
                    android:id="@+id/user_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_nick_title"
                    android:background="@drawable/bg_bbb_4"
                    android:hint="请填写昵称"
                    android:paddingLeft="10dp"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_nick_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="9dp"
                    android:text="昵    称" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <com.niuyun.hire.view.CleanableEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_password_title"
                    android:background="@drawable/bg_bbb_4"
                    android:hint="@string/password_hint"
                    android:paddingLeft="10dp"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="9dp"
                    android:text="密    码" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/agrrement_agree"
                android:textColor="@color/color_666666"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/userAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/agrrement_title"
                android:textColor="@color/color_45b3fc"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/tv_next"
            style="@style/btn_blue_btn"
            android:layout_marginTop="40dp"
            android:text="@string/regist" />

        <TextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="已有账号？点击登录" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@mipmap/ic_divider" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="选择登陆" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@mipmap/ic_divider" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_weixin" />

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_qq" />

            <ImageView
                android:id="@+id/iv_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_sina" />

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_phone" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>